--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="https://twitter.com/gcjohns?t=-rQ9kbdfBkn1mjIw_qQH4A&s=08" target="_blank" rel="noopener noreferrer"><i class='bx bxl-twitter'></i></a>
             </div>
     
-            <a href="#" class="btn" id="download-cv-btn">Download CV</a>
+            <a href="C:\Users\40ndg\OneDrive\Desktop\webgit\cleverjohnson.github.io\Johnson_Ggalabuzi_-_Full_Stack_Developer.pdf" class="btn" id="download-cv-btn">Download CV</a>
         </div>
     
         <div class="home-img">
